Fixed issue with overlaping footer with devise forms

--- a/app/assets/stylesheets/footer.css.scss
+++ b/app/assets/stylesheets/footer.css.scss
@@ -5,7 +5,7 @@
   width: 100%;
   text-align: left;
   font: normal 16px sans-serif;
-
+  clear: both;
   padding: 30px 10px;
   margin-top: 20px;
 }
